Bug fix:
Added vertical-align declaration for default styles. Fixes a bug with rows not aligning with fixed columns

--- a/css/defaultTheme.css
+++ b/css/defaultTheme.css
@@ -30,7 +30,7 @@
 	/* text */
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;
+	vertical-align: top;
 	}
 
 .fht-table {
